@@ -1,3 +1,8 @@
+2001-07-17  Bradford Hovinen  <hovinen@ximian.com>
+
+	* location.c (location_store): Use return value
+	(location_store_full_snapshot): Use return value
+
 2001-07-12  Bradford Hovinen  <hovinen@ximian.com>
 
 	* archive.c (archive_destroy): Clear appropriate global archive pointer
